Prettier output for demo workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,5 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           pull_number: 6
       - env:
-          PR: ${{ toJson(steps.pr_fetch.outputs.pull_request) }}
+          PR: ${{ steps.pr_fetch.outputs.pull_request }}
         run: echo "$PR"
