--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^18.13.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.36.1",
     "eslint": "^8.34.0",
     "eslint-plugin-github": "^4.6.1",
     "eslint-plugin-jest": "^27.2.1",
