--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "eslint": "^8.56.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "jest": "^27.5.1",
     "jest-circus": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "prettier": "2.8.8",
+    "prettier": "^3.1.1",
     "ts-jest": "^27.1.4",
     "typescript": "^4.9.5"
   }
