--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "@actions/github": "^6.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.6",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^8.57.1",
+    "eslint": "^9.20.1",
     "eslint-plugin-github": "^5.1.5",
-    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.2",
-    "jest": "^27.5.1",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
     "js-yaml": "^4.1.0",
     "prettier": "^3.4.2",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   }
 }
